# ablation-bench

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
ablation_bench/: __init__.py  cli.py  logger.py  types.py
ablation_bench/harness/: evaluation.py  judge_evaluation.py  utils.py
ablation_bench/judge/: __init__.py  abstract.py  majority_judge.py  simple_lm.py  sweagent.py
ablation_bench/planner/: __init__.py  abstract.py  plan.py  simple_lm.py  sweagent.py
config/majority_judge/: majority_vote.yaml  majority_vote_author.yaml  majority_vote_reviewer.yaml
config/simple_lm/: judge_ablation_suggestions.yaml  judge_missing_ablation_suggestions.yaml  plan_ablations.yaml  plan_missing_ablations.yaml
config/sweagent/: judge_ablation_suggestions.yaml  judge_ablation_suggestions_no_fcalls.yaml  judge_missing_ablation_suggestions.yaml  judge_missing_ablation_suggestions_no_fcalls.yaml  plan_ablations.yaml  plan_ablations_no_fcall.yaml  plan_missing_ablations.yaml  plan_missing_ablations_no_fcall.yaml
config/sweagent/demos/HybrIK/: HybrIK.demo.yaml
config/sweagent/tools/ablation_review_suggestion/: config.yaml
config/sweagent/tools/ablation_submit/: README.md  config.yaml
data/ai-coscientist/author-ablation/: dev.parquet  test.parquet
data/ai-coscientist/author-eval/: test.parquet
data/ai-coscientist/reviewer-ablation/: dev.parquet  full.parquet  test.parquet
data/ai-coscientist/reviewer-eval/: test.parquet
data/papers/full/12_Lead_ECG_Generation_via_a_PDE_Based_GAN/: 12_Lead_ECG_Generation_via_a_PDE_Based_GAN.md  12_Lead_ECG_Generation_via_a_PDE_Based_GAN_meta.json
docker/: base.Dockerfile  base_with_code.Dockerfile  build_base_images.sh  judge.Dockerfile
(+1469 files in other folders)
