[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ablation-bench"
dynamic = ["version"]
description = "A benchmarking tool for model ablation studies"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "pydantic==2.11.4",
    "typing-extensions==4.13.2",
    "scikit-learn==1.6.1",
    "pandas==2.2.3",
    "datasets==3.6.0",
    "pydantic-settings==2.9.1",
    "click==8.1.8",
    "typer==0.15.2",
    "litellm==1.69.2",
    "jinja2==3.1.6",
    "tenacity==9.1.2",
]

[project.scripts]
ablation-bench = "ablation_bench.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "pre-commit",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "ablation_bench.__version__"}

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I001",
    "I002",
    "UP",
    "B",
    "RUF",
    "PTH"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
